try fixed layout on mobile

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,6 +4,12 @@
   align-items: top;
   min-height: 90vh;
 }
+
+.fixedLayout {
+  top: 0;
+  bottom: 0;
+  position: fixed;
+}
 .content {
   display: flex;
   flex-direction: column;
@@ -69,7 +75,7 @@
   position: relative;
 }
 .header h1::after {
-  content: "...App built by David Douglas";
+  content: "App built by David Douglas";
   position: absolute;
   bottom: 0;
   left: 0;
@@ -107,7 +113,7 @@
 
 .content .buttonHolder {
   justify-self: flex-end;
-  flex-grow: 1;
+  /* flex-grow: 1; */
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -122,10 +128,25 @@
   background: none;
   color: white;
   border: 3.5px solid white;
-  margin-bottom: 2rem;
+  margin-bottom: 4rem;
   margin-top: 2.5rem;
   border-radius: 2rem;
   padding: 0.5rem;
+}
+.mainSectionHolder {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.mainSection {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding-bottom: 5rem;
 }
 
 .inputSection {
